<resources>
    <string name="app_name">Hoseo OceanIT2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_member">연구인력</string>
    <string name="menu_result">연구성과</string>
    <string name="menu_field">연구과제</string>
    <string name="menu_pcver">PC 버전</string>
    <string name="menu_water">분산형 수중관측망</string>
</resources>