<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.deuksoft.hoseooceanit2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_member"
        android:name="com.deuksoft.hoseooceanit2.ui.member.MemberFragment"
        android:label="@string/menu_member"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/nav_result"
        android:name="com.deuksoft.hoseooceanit2.ui.result.ResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/nav_field"
        android:name="com.deuksoft.hoseooceanit2.ui.field.FieldFragment"
        android:label="@string/menu_field" />
</navigation>